--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ html, body {
     flex-direction: column;
     position: absolute;
     max-height: 80%;
-    width: calc(100vw - 23rem);
+    width: 80%;
     overflow: auto;
     top: 50%;
     left: 50%;
@@ -57,8 +57,8 @@ html, body {
 }
 
 ::-webkit-scrollbar {
-    width: 0.3rem;
-    height: 0.3rem;
+    width: 0.4rem;
+    height: 0.4rem;
 }
 
 /* Track */
